--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,11 +12,12 @@
     "dotenv": "^17.2.3",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.13",
-    "expo-dev-client": "^6.0.20",
+    "expo-dev-client": "~6.0.20",
     "expo-location": "^19.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-maps": "^1.20.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
