--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "dotenv": "^17.2.3",
     "expo": "~54.0.32",
     "expo-constants": "~18.0.13",
