--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   pull_request:
   push:
-    branches: ["main"]
+    branches: ['main']
   workflow_dispatch:
 
 concurrency:
@@ -50,15 +50,17 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
-          java-version: "21"
-          cache: "maven"
+          distribution: 'temurin'
+          java-version: '21'
+          cache: 'maven'
 
       - name: Make mvnw executable
         run: chmod +x mvnw
 
       - name: Build & test (Maven Wrapper)
         run: ./mvnw -B -ntp clean verify
+        env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
   mobile:
     name: Mobile (Expo) - install/doctor
@@ -76,8 +78,8 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: '20'
+          cache: 'npm'
           cache-dependency-path: mobile/package-lock.json
 
       - name: Install deps
