--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=backend
+# Database Connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/big_data_energy
+spring.datasource.username=bigdataenergy
+spring.datasource.password=bigdataenergy
+# Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
