--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@gorhom/bottom-sheet": "^5.2.8",
     "dotenv": "^17.2.3",
     "expo": "^54.0.33",
     "expo-constants": "~18.0.13",
@@ -21,7 +22,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.30.0",
     "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
