(#16) more minor changes

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -21,7 +21,7 @@
       "bundleIdentifier": "com.anonymous.mobile"
     },
     "android": {
-      "package": "com.soen390.conunav",
+      "package": "com.anonymous.mobile",
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION"
