(#12) fixed target path for jars

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,9 +64,9 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: bigdataenergy
         run: mvn -B clean verify
 
-      - name: Copy backend dependencies for Sonar (creates backend/target/dependency/*.jar)
+      - name: Copy backend dependencies for Sonar (creates backend/target/*.jar)
         working-directory: backend
-        run: mvn -B -DskipTests dependency:copy-dependencies -DoutputDirectory=target/dependency
+        run: mvn -B -DskipTests dependency:copy-dependencies -DoutputDirectory=target/
 
       # ---- SonarQube Scan ----
       - name: SonarQube Scan
@@ -76,4 +76,4 @@ jobs:
         with:
           args: >
             -Dsonar.java.binaries=backend/target/classes
-            -Dsonar.java.libraries=backend/target/dependency/*.jar
+            -Dsonar.java.libraries=backend/target/*.jar
