--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,20 +16,20 @@
     "expo": "^54.0.33",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
-    "expo-linking": "~8.0.11",
-    "expo-router": "~6.0.22",
     "expo-font": "~14.0.11",
+    "expo-linking": "~8.0.11",
     "expo-location": "^19.0.8",
+    "expo-router": "~6.0.23",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "zustand": "^5.0.11",
-    "react-native-maps": "^1.20.1"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
