(#56) Updated sonar-project.properties to point to proper path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ Backend.sonar.java.libraries=target/*.jar,target/dependency/*.jar
 
 
 Mobile.sonar.projectBaseDir=mobile
-Mobile.sonar.sources=src,App.tsx,GoogleMap.tsx,index.ts,app.config.ts
+Mobile.sonar.sources=src,app.config.ts
 Mobile.sonar.tests=e2e
 
 
