--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,6 +28,7 @@
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
+    "expo-linking": "~8.0.11",
     "expo-location": "^19.0.8",
     "expo-router": "^6.0.23",
     "expo-status-bar": "~3.0.9",
@@ -39,6 +40,9 @@
     "react-native-maps": "^1.20.1",
     "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
