Includes all the indoor pathfinding, frontend and backend for each floor as well as the POIs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.config.import=optional:file:local.properties
 
 spring.application.name=backend
+server.port=8080
 # Database Connection
 spring.datasource.url=jdbc:postgresql://localhost:5433/big_data_energy
 spring.datasource.username=bigdataenergy
