All frontend and backend logic for the indoor direction for the floors. This cover the first 3 user stories of Epic 5

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>spring-boot-docker-compose</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.2</version>
+        </dependency>
     </dependencies>
 
     <build>
