--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
     "husky": "^9.1.7"
   },
   "scripts": {
-    "prepare": "husky"
-  }
+    "prepare": "husky",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
+  },
+  "dependencies": {
+    "expo": "^54.0.33",
+    "react": "19.1.0",
+    "react-native": "0.81.5"
+  },
+  "name": "SOEN390-Mini-Cap-Project-1",
+  "version": "1.0.0"
 }
