--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,10 @@ Backend.sonar.java.libraries=target/*.jar,target/dependency/*.jar
 
 Mobile.sonar.projectBaseDir=mobile
 Mobile.sonar.sources=src,app.config.ts
-Mobile.sonar.tests=e2e
+Mobile.sonar.tests=src/__tests__,e2e
+Mobile.sonar.exclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, **/node_modules/**
+
+Mobile.sonar.test.inclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, e2e/**
 
 
 sonar.exclusions=**/node_modules/**,**/target/**,**/.scannerwork/**
