(#10) fix-report-coverage-test-frontend

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -21,3 +21,5 @@ Mobile.sonar.test.inclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, e2e/
 
 sonar.exclusions=**/node_modules/**,**/target/**,**/.scannerwork/**
 
+Mobile.sonar.javascript.lcov.reportPaths=coverage/lcov.info
+
