(#10) changing-path-sonarqube

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,7 +16,7 @@ Mobile.sonar.sources=src,app.config.ts
 Mobile.sonar.tests=src/__tests__,e2e
 Mobile.sonar.exclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, **/node_modules/**
 Mobile.sonar.test.inclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, e2e/**
-Mobile.sonar.javascript.lcov.reportPaths=coverage/lcov.info
+Mobile.sonar.javascript.lcov.reportPaths=../coverage/lcov.info
 
 
 sonar.exclusions=**/node_modules/**,**/target/**,**/.scannerwork/**
