--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ Backend.sonar.java.libraries=target/*.jar,target/dependency/*.jar
 Mobile.sonar.projectBaseDir=mobile
 Mobile.sonar.sources=src,app.config.ts
 Mobile.sonar.tests=src/__tests__,e2e
-Mobile.sonar.exclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, **/node_modules/**, src/__mocks__/**
+Mobile.sonar.exclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, **/node_modules/**, src/__mocks__, **/app/**/index.tsx
 Mobile.sonar.test.inclusions=src/__tests__/**, **/*.test.tsx, **/*.test.ts, e2e/**
 Mobile.sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
