--- a/mobile/package.json
+++ b/mobile/package.json
@@ -59,8 +59,10 @@
     "@types/react": "~19.1.0",
     "babel-preset-expo": "^54.0.10",
     "expo-doctor": "^1.17.14",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.17",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
   "private": true
