--- a/mobile/package.json
+++ b/mobile/package.json
@@ -61,6 +61,7 @@
     "expo-doctor": "^1.17.14",
     "jest": "^29.7.0",
     "jest-expo": "^54.0.17",
+    "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
   "private": true
